--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -19,8 +19,8 @@
 	</context-param>
 
 
-<!-- Declaration de la servlet unique des web service -->
-<servlet>
+	<!-- Declaration de la servlet unique des web service -->
+	<servlet>
 		<servlet-name>projetImmo</servlet-name>
 		<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 
@@ -30,15 +30,15 @@
 			<param-value>/WEB-INF/mvc-context.xml</param-value>
 		</init-param>
 	</servlet>
-	
+
 	<!-- Mapping de la servlet unique de spring mvc -->
 	<servlet-mapping>
 		<servlet-name>projetImmo</servlet-name>
-		<url-pattern>/*</url-pattern>
+		<url-pattern>/</url-pattern>
 	</servlet-mapping>
 
 
 	<welcome-file-list>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>indexPC.html</welcome-file>
 	</welcome-file-list>
 </web-app>
